# Intelligent-Restaurant-Management-System-IRMS-

./: .gitignore  README.md  RESET_GUIDE.md  docker-compose.yml  package-lock.json  pyproject.toml  reset-kds-data.js  setup-frontend-order.sh  setup-frontend.sh  start-demo.ps1  start-demo.sh
app/: __init__.py  main.py
app/modules/kds/: __init__.py  router.py  service.py  websocket.py
app/modules/ordering/: router.py  service.py
backend/: .env.example  .gitignore  README.md  requirements-dev.txt  requirements.txt  test.db
backend/app/: config.py  database.py  deps.py  main.py  seed.py
backend/app/models/: __init__.py  customer.py  enums.py  menu_category.py  menu_item.py  order.py  order_event.py  payment.py  reservation.py  restaurant_table.py  staff.py  station.py
backend/app/modules/: __init__.py
backend/app/shared/: __init__.py  domain_events.py  events.py  models.py  store.py  websocket.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_kds_integration.py  test_menu_table_services.py  test_order_service.py
docs/: api.yaml  ws-schema.md
frontend/: README.md  package-lock.json
frontend-order/: vite.config.js
frontend-order/src/: index.css
frontend-order/src/hooks/: useOrder.js
frontend-order/src/pages/: OrderListPage.css  OrderListPage.jsx  OrderingPage.css  OrderingPage.jsx  WelcomePage.css  WelcomePage.jsx
frontend-order/src/utils/: format.js  menuDB.js  orderDB.js  tableDB.js
frontend/src/: App.jsx  index.css  main.jsx
frontend_kds/: README.md  vite.config.js
frontend_kds/src/: App.jsx  main.jsx
(+60 files in other folders)
